[gd_scene load_steps=3 format=3 uid="uid://p7h5b67q0ib3"]

[ext_resource type="Script" uid="uid://83gtv34jd4m7" path="res://Scripts/CharacterWidget.gd" id="1_b6ccx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj5ht"]
size = Vector2(186, 105)

[node name="Character widget Control Node" type="Control"]
z_index = 4
custom_minimum_size = Vector2(181, 102)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6ccx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 184.0
offset_bottom = 103.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name_Type_HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Tupe_Label" type="Label" parent="VBoxContainer/Name_Type_HBoxContainer"]
layout_mode = 2
text = "Monster:"

[node name="Name_Label" type="Label" parent="VBoxContainer/Name_Type_HBoxContainer"]
layout_mode = 2
text = "Placeholder "

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Class/Role: Placeholder "

[node name="Health_HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HP_Label" type="Label" parent="VBoxContainer/Health_HBoxContainer"]
layout_mode = 2
text = "HP: 100"

[node name="Temp_HP_Label" type="Label" parent="VBoxContainer/Health_HBoxContainer"]
layout_mode = 2
text = "Temp Hp: 100"

[node name="Initiative_AC_HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AC_Label" type="Label" parent="VBoxContainer/Initiative_AC_HBoxContainer"]
layout_mode = 2
text = "AC: 99"

[node name="Initiative_Label" type="Label" parent="VBoxContainer/Initiative_AC_HBoxContainer"]
layout_mode = 2
text = "Initiative: 9999"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(91, 50.5)
shape = SubResource("RectangleShape2D_uj5ht")
